--- a/Christmas.html
+++ b/Christmas.html
@@ -87,7 +87,7 @@
         </style>      
     </head>      
 <body marginwidth="0" marginheight="0">
-    <canvas id="c" height="356" width="446">
+    <canvas id="c" height="100%" width="100%">
     <script>              
         var collapsed = true;            
         function toggle()            
